samples/_failures_safe/1761345415_744388_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_6ea0bf0e.c: In function ‘main’:
./samples/SAFE/__tmp_6ea0bf0e.c:147:16: error: missing terminating " character
  147 |         printf("
      |                ^
./samples/SAFE/__tmp_6ea0bf0e.c:147:9: error: expected expression at end of input
  147 |         printf("
      |         ^~~~~~
./samples/SAFE/__tmp_6ea0bf0e.c:147:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_6ea0bf0e.c:147:9: error: expected declaration or statement at end of input
